# flask_learn

./: pyproject.toml
flaskbook/: .env
flaskbook/apps/minimalapp/: app.py
flaskbook/apps/minimalapp/static/: style.css
flaskbook/apps/minimalapp/templates/: contact.html  contact_complete.html  index.html
